[package]
name = "cassandra-sigv4"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sigv4 = {version = "0.55.2", features = ["bytes"], default-features = false }
cassandra-cpp-sys = "1.1.0"
chrono = "0.4.24"
hex = "0.4.3"
sha256 = "1.1.3"
url-escape = "0.1.1"
